--- a/package.yaml
+++ b/package.yaml
@@ -14,7 +14,9 @@ description: TUI version of the Wordle word puzzle game written in Haskell
 dependencies:
   - base >= 4.7 && < 5
   - containers
+  - random
   - brick
+  - vty
 
 library:
   source-dirs: src
