--- a/wordle.cabal
+++ b/wordle.cabal
@@ -41,6 +41,7 @@ executable wordle
   main-is: Main.hs
   other-modules:
       Paths_wordle
+      Paths_wordle
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
