--- a/.github/workflows/wordle.yml
+++ b/.github/workflows/wordle.yml
@@ -3,6 +3,21 @@ on:
   - pull_request
 name: test
 jobs:
+  hlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: 'Set up HLint'
+        uses: haskell/actions/hlint-setup@v1
+        with:
+          version: '3.1.6'
+
+      - name: 'Run HLint'
+        uses: haskell/actions/hlint-run@v1
+        with:
+          path: src/
+          fail-on: warning
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -13,7 +28,7 @@ jobs:
         exclude:
           - ghc: 8.8.3
             cabal: 2.4.1.0
-    name: Haskell GHC ${{ matrix.ghc }} sample
+    name: stack test GHC ${{ matrix.ghc }}
     steps:
       - uses: actions/checkout@v2
       - name: stack test
@@ -22,8 +37,3 @@ jobs:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
       - run: stack test
-      - name: hlint
-      uses: haskell/actions/hlint-run@v1
-      with:
-        path: src/
-        fail-on: warning
